<resources>
    <string name="app_name">DONO</string>
    <string name="navigation_open">Open navigation</string>
    <string name="navigation_close">Close navigation</string>
    <string name="create_new_wallet">새 지갑 생성</string>
    <string name="import_wallet">지갑 복원</string>
    <string name="when_you_create_a_wallet">지갑 만들기를 실행하면</string>
    <string name="terms_of_service">이용약관</string>
    <string name="privacy_policy">개인정보보호처리방침 에</string>
    <string name="read_terms_continue">관한 동의가 자동으로 이루어집니다.</string>
    <string name="six_digits">6자리</string>
    <string name="password">비밀번호</string>
    <string name="otp_middle_first_line">지갑 로그인 및 가상 자산을 보낼 때</string>
    <string name="otp_middle_second_line_begin">사용되는</string>
    <string name="otp_middle_red_line">비밀번호(6자리)</string>
    <string name="otp_middle_end">입니다.</string>
    <string name="one_more">다시 한번</string>
    <string name="please_enter">입력해 주세요.</string>
    <string name="different_password">입력한 비밀번호가 다릅니다.</string>
    <string name="check_password">비밀번호를 확인해주세요.</string>
    <string name="backup_seeds">시드 구문 백업</string>
    <string name="important_12_words">아래 시드 구문 12단어는 굉장히 중요합니다!</string>
    <string name="save_safely">타인이 볼 수 없는 곳(*수기 작성 추천)에\n시드 구문을 보관하세요. 타인에게 시드 구문 12단어가\n노출되는 경우,가상 자산이 외부로 전송될 수 있습니다.</string>
    <string name="backup_complete">백업 완료</string>
    <string name="really_backed_up">정말로 시드 구문을 백업하셨나요?</string>
    <string name="do_not_share_phrases">시드 구문을 온라인으로 공유하거나 \n전자기기(컴퓨터, 노트북, 스마트폰 등)에 저장한 경우, \n가상 자산을 유실할 수 있습니다.</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="wallet_created">지갑 생성이\n완료되었습니다.</string>
    <string name="confirm">확인</string>
    <string name="name">이름</string>
    <string name="wallet_address">지갑 주소</string>
    <string name="receive">입금</string>
    <string name="transactions_details">거래 내역 상세</string>
    <string name="hold_virtual_assets">보유 가상 자산</string>
    <string name="my_page">마이 페이지</string>
    <string name="address_book">주소록</string>
    <string name="settings">설정</string>
    <string name="service_center">고객센터</string>
    <string name="notice">공지사항</string>
    <string name="direct_message">1:1 문의하기</string>
    <string name="app_version">앱 버전 1.0</string>
    <string name="add_token">토큰추가</string>
    <string name="search">검색</string>
    <string name="custom_token">맞춤형 추가</string>
    <string name="enter_token_symbol">토큰 심볼을 입력하세요.</string>
    <string name="enter_name">이름을 입력해주세요</string>
    <string name="enter_wallet_address">지갑 주소를 입력해주세요</string>
    <string name="email">이메일</string>
    <string name="content">내용</string>
    <string name="enter_title">성함을 입력해주세요</string>
    <string name="enter_email">이메일 주소를 입력해주세요</string>
    <string name="enter_inquiry">문의 내용을 입력해주세요</string>
    <string name="private_key">프라이빗 키</string>
    <string name="important_private_key">프라이빗 키는\n굉장히 중요합니다!</string>
    <string name="keep_your_private_key">타인이 볼 수 없는 곳(*수기 작성 추천)에 프라이빗 키를\n보관하세요. 타인에게 프라이빗 키가\n노출되는 경우,  가상 자산이 외부로 전송될 수 있습니다.</string>
    <string name="qr_code_back_up">QR 코드 백업</string>
    <string name="seed_back_up">시드 구문 백업</string>
    <string name="private_key_back_up">프라이빗 키 보기</string>
    <string name="lock_app">지갑 잠금</string>
    <string name="next">다음</string>
    <string name="not_enough_balance">잔액이 부족합니다</string>
    <string name="not_enough_fee">수수료 부족합니다</string>
    <string name="send">출금</string>
    <string name="deposit">입금</string>
    <string name="withdrawal_address">출금주소</string>
    <string name="incorrect_withdrawal_address_warning">*잘못된 출금 주소를 입력하는 경우, 가상 자산 복구는 불가능합니다.</string>
    <string name="fee">수수료</string>
    <string name="amount">금액</string>
    <string name="enter_quantity">수량을 입력해주세요.</string>
    <string name="enter_address_with_ox">0x로 시작하는 주소를 입력해주세요.</string>
    <string name="balance">잔액:</string>
    <string name="enter_receiver">주소와 금액을 먼저 입력해주세요.</string>
    <string name="no_transactions">거래 내역이 없습니다.</string>
    <string name="all">전체</string>
    <string name="back">뒤로</string>
    <string name="withdrawal_quantity">출금 수량</string>
<!--    <srting name="withdrawal_confirmation">출금 확인</srting>-->
    <string name="withdrawal_confirmation">출금 확인</string>
    <string name="check_above_info">* 위 정보가 맞는지 확인해주세요.\n
잘못된 정보인 경우, 가상 자산을 찾을 방법은 없습니다.</string>
    <string name="import_seeds">시드구문 불러오기</string>
    <string name="import_by_qrcode">QR코드 불러오기</string>
    <string name="enter_phrases_correctly">구문을 올바른 순서로 입력해주세요</string>
    <string name="enter_phrase">구문 입력</string>
    <string name="import_wallet_address">지갑 불러오기</string>
    <string name="incorrect_phrase">구문이 옳지 않습니다.</string>
    <string name="import_wallet_done">지갑 불러오기\n완료</string>
    <string name="add_btn">등록하기</string>
    <string name="select">선택</string>
    <string name="not_allowed">허용 안함</string>
    <string name="be_sure_to_keep_qrcode">반드시 QR 코드는 \n안전한 곳에 보관하세요</string>
    <string name="qrcode_backup">QR 코드 백업</string>
    <string name="backup">백업</string>
    <string name="qrcode_saved">QR코드가 갤러리에\n저장되었습니다.</string>
    <string name="dialog_first_line">이 사용자 앨범을</string>
    <string name="dialog_second_line">사용합니다</string>
    <string name="save_image_gallery">디바이스의 사진앨범에 이미지를 저장합니다.</string>
    <string name="faq_title">G3S Wallet 생성은 어떻게 하나요?</string>
    <string name="token_symbol">토큰 심볼</string>
    <string name="token_decimals">소수점 자리</string>
    <string name="token_contract">토큰 계약 주소</string>
    <string name="add">추가</string>
    <string name="would_you_like_add_token">이 토큰을 추가하시겠습니까?</string>
    <string name="already_added_token">이미 추가된 토큰입니다.</string>
    <string name="check_token_net">현재 네트워크를 지원하지 않는 토큰입니다. 메인넷/테스트넷 여부를 확인해주세요.</string>
    <string name="loading_data">데이터 불러오는 중</string>
    <string name="home">홈</string>
    <string name="wallet">지갑</string>
    <string name="invalid_wallet_address">지갑 주소가 유효하지 않습니다</string>
    <string name="copied">복사되었습니다!</string>
    <string name="terms_of_use_second_line">관한 동의가 자동으로 이루어집니다.</string>
    <string name="really_want_delete">정말 삭제 하시겠습니까?</string>
</resources>