<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#020F27"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textColor="@color/white"
            android:background="@drawable/linear_bgr"
            android:textColorHint="#B9BABB"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/enter_title"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:background="@drawable/linear_bgr"
            android:textColorHint="#B9BABB"
            android:layout_marginEnd="18dp"
            android:hint="@string/enter_email"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/content"
            android:textSize="14dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|start"
            android:padding="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="18dp"
            android:textColor="@color/white"
            android:background="@drawable/linear_bgr"
            android:textColorHint="#B9BABB"
            android:layout_marginBottom="30dp"
            android:hint="@string/enter_inquiry"
            android:text=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#DD4343"
            android:textSize="14dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/confirmQuestion"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/notosanskr_regular"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
</layout>