<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#020F27"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/screenshot_dialog" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DONO wallet"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/dialog_first_line"/>

        </LinearLayout>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_second_line"
            android:layout_marginTop="2dp"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"/>



        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="normal"
            android:text="@string/save_image_gallery"
            android:textSize="14dp"
            android:textColor="#B9BABB" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/okBtn"
                android:text="@string/not_allowed"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_regular"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="60dp"
               android:background="#414A5A"

                />
            <TextView
                android:id="@+id/noBtn"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:textSize="17dp"
                android:fontFamily="@font/notosanskr_regular"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="60dp"

                />
        </LinearLayout>



    </LinearLayout>
</layout>