<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#020F27"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <TextView
            android:id="@+id/otp_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/six_digits"
            android:textColor="#B9BABB"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/otp_status_second_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/password"
            android:textColor="#B9BABB"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/onSendingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="18dp"
            android:text="네트워크 상태에 따라 전송 완료까지 시간이\n
소요될 수 있습니다. 거래내역을 통해 확인해주세요."
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/firstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/otp_middle_first_line"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/secondLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secondLineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/otp_middle_second_line_begin"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/secondLineBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/otp_middle_red_line"
                android:layout_marginStart="3dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/secondLineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="@string/otp_middle_end"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <com.andrognito.pinlockview.IndicatorDots
            android:id="@+id/indicatorDots"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:dotDiameter="48dp"
            app:dotEmptyBackground="@drawable/otp_unselected"
            app:dotFilledBackground="@drawable/otp_selected"
            app:dotSpacing="5dp"
            app:pinLength="6" />

        <TextView
            android:id="@+id/blueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="13dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:textColor="#CD0046" />

        <com.andrognito.pinlockview.PinLockView
            android:id="@+id/pin_lock_view"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            app:keypadButtonSize="56dp"
            app:keypadDeleteButtonSize="24dp"
            app:keypadShowDeleteButton="true"
            app:keypadTextColor="@color/white"
            app:keypadTextSize="28dp"
            app:pinLength="6" />

    </LinearLayout>
</layout>