<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/title"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center"
                android:padding="18dp"
                android:src="@drawable/bback_button" />

            <ImageView
                android:id="@+id/endImage"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center"
                android:padding="18dp"
                android:src="@drawable/qr_code_icon" />
        </FrameLayout>


        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="18dp"-->
        <!--            android:fontFamily="@font/notosanskr_regular"-->
        <!--            android:includeFontPadding="false"-->
        <!--            android:text="입금"-->
        <!--            android:textColor="@color/black"-->

        <!--            android:textSize="30dp"-->
        <!--            android:textStyle="bold" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/g3s" />

            <TextView
                android:id="@+id/cymbolHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="14dp"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                android:text="G3S"
                android:textColor="#121212"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/withdrawal_address"
                android:textSize="14dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/incorrect_withdrawal_address_warning"
                android:textSize="8dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/frame_background"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/receiverAddress"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="middle"
                android:hint="@string/enter_address_with_ox"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:text=""
                android:textColorHint="#d2d2d2"

                android:textSize="12dp" />


        </LinearLayout>

        <Button
            android:id="@+id/addressBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:textSize="14dp"
            android:background="#f0f0f0"
            android:text="@string/address_book" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/frame_background"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_quantity"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:textColorHint="#d2d2d2"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/cymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:textSize="14dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="G3S"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Max"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/balance"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/lines" />

        <TextView
            android:id="@+id/fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/fee"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/currentFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="1 G3S"
            android:textColor="#253D85"
            android:textSize="12dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="#ff0000" />


        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textSize="14dp"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>