<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#020C1F"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/otp_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:text="@string/important_private_key"
            android:textColor="@color/white"
            android:textSize="34dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:lineSpacingExtra="2dp"
            android:text="@string/keep_your_private_key"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/linear_bgr"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:ellipsize="middle"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/copyBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:tint="@color/white"
                android:src="@drawable/copy_btn" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/notosanskr_regular"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
</layout>